[package]
name = "fontcull"
version = "2.0.1"
edition = "2024"
authors = ["Amos Wenger <amos@bearcove.eu>"]
description = "Pure Rust font subsetting library"
license = "MIT"
repository = "https://github.com/bearcove/fontcull"
homepage = "https://github.com/bearcove/fontcull"
keywords = ["font", "subset", "woff2", "ttf", "otf"]
categories = ["text-processing", "web-programming"]
readme = "README.md"

[features]
default = ["woff2"]
woff2 = ["dep:woofwoof"]
static-analysis = ["dep:scraper"]

[dependencies]
# Static HTML/CSS analysis (optional)
scraper = { version = "0.24", optional = true }

# WOFF2 compression/decompression (optional, requires C++)
woofwoof = { version = "1.0", optional = true }

# klippa backend (vendored from googlefonts/fontations)
fontcull-klippa = { version = "0.1.2", path = "../vendored/fontcull-klippa" }
fontcull-skrifa = { version = "0.39.2", path = "../vendored/fontcull-skrifa" }
fontcull-write-fonts = { version = "0.44.3", path = "../vendored/fontcull-write-fonts" }
fontcull-read-fonts = { version = "0.38.0", path = "../vendored/fontcull-read-fonts" }
